--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Usuarios</title>
 </head>
 <body>
-    <h1>Home - Node + Express</h1>
-
-    <a href="/usuarios/30">Ver Usuario 30</a>
-    <a href="/usuarios/496">Ver Usuario 496</a>
+    <h1>Usuarios</h1>
+    <a href="/">Voltar</a>
 </body>
 </html>
